Website/stylish.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    width: 100 vw;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    gap: 10px;

    background-image: url('/Website/images/cheese-background.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

}
.main-container {
    display: flex;
    flex-direction:column;
    justify-content: center;
}

h1 {
    text-align: center;
    color: rgba(184, 73, 0, 0.904);
    font-size: 25px;
}

img {
    width: 300px;
    height: auto;
    display: block;
    margin: 15px auto;
    border-radius: 8px;
}

.mouse-island {
    width: 600px
}

.button a{
    display: block;
    background-color: rgb(184, 132, 0);
    color: black;
    padding: 10px 20px;
    border-radius: 8px;
    text-decoration: none;
}

nav {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 20px
}
.characters-box {
display: flex;
justify-content: center;
gap: 18px;
flex-wrap: wrap;
}

